@@ -1,3 +1,9 @@
+1999-06-02  Laurent Pautet  <pautet@scapin.enst.fr>
+
+	* configure.in: Sanity directory is now an env. variable instead
+ 	of a configuration option (in order to test with a binary
+ 	release).
+
 1999-04-15  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* MANIFEST: Add Garlic/stamp-h.in to the distribution to avoid the 
